--- a/test_interpret.ipynb
+++ b/test_interpret.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,36 +33,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading the object using dill\n",
     "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\sd_results'\n",
-    "file_name = 'Ionosphere-data-reductions.pkl'\n",
+    "file_name = '-data-reductions.pkl'\n",
     "with open(os.path.join(sd_results_path,file_name), 'rb') as f:\n",
     "    loaded_dict =pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n"
+      "auto_encoder      \n",
+      " FCS:  0.53     FCSS 0.13\n",
+      "PCA      \n",
+      " FCS:  0.65     FCSS 0.14\n",
+      "SPCA      \n",
+      " FCS:  0.72     FCSS 0.19\n"
      ]
     }
    ],
    "source": [
-    "methods = ['Auto Encoder', 'PCA', 'SPCA']\n",
-    "for i in range(1, len(loaded_dict)):\n",
-    "    methods"
+    "datasets = []\n",
+    "for dataset in dataset:\n",
+    "    file_name = '-data-reductions.pkl'\n",
+    "        en_methods = ['auto_encoder', 'PCA', 'SPCA']\n",
+    "        for en_method in en_methods:\n",
+    "            fcs, fcss = Feature_Correlation_Scores(loaded_dict['vanilla'], loaded_dict[en_method])\n",
+    "            print(en_method, \"    \", \"\\n FCS: \", round(fcs, 2), \"    FCSS\", round(fcss, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>cat1</th>\n",
+       "      <th>cat2</th>\n",
+       "      <th>cat3</th>\n",
+       "      <th>cat4</th>\n",
+       "      <th>cat5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.085433</td>\n",
+       "      <td>-0.008109</td>\n",
+       "      <td>2.769221</td>\n",
+       "      <td>-1.309007</td>\n",
+       "      <td>1.818651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.220155</td>\n",
+       "      <td>1.821277</td>\n",
+       "      <td>0.997081</td>\n",
+       "      <td>-0.944791</td>\n",
+       "      <td>5.082852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.546220</td>\n",
+       "      <td>-0.090474</td>\n",
+       "      <td>3.039274</td>\n",
+       "      <td>-0.793125</td>\n",
+       "      <td>0.585284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.532459</td>\n",
+       "      <td>-1.948231</td>\n",
+       "      <td>-1.751228</td>\n",
+       "      <td>-0.621276</td>\n",
+       "      <td>-2.728531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.665896</td>\n",
+       "      <td>0.597152</td>\n",
+       "      <td>1.729603</td>\n",
+       "      <td>-1.021183</td>\n",
+       "      <td>2.745559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.319230</td>\n",
+       "      <td>-0.128999</td>\n",
+       "      <td>4.123497</td>\n",
+       "      <td>-0.468865</td>\n",
+       "      <td>-0.377496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.094618</td>\n",
+       "      <td>-0.203330</td>\n",
+       "      <td>4.084755</td>\n",
+       "      <td>-0.663449</td>\n",
+       "      <td>-0.544531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.141873</td>\n",
+       "      <td>-0.188322</td>\n",
+       "      <td>4.018230</td>\n",
+       "      <td>-0.705673</td>\n",
+       "      <td>-0.517522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.402674</td>\n",
+       "      <td>-0.219408</td>\n",
+       "      <td>3.848034</td>\n",
+       "      <td>-0.950649</td>\n",
+       "      <td>-0.291891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.351966</td>\n",
+       "      <td>-0.281709</td>\n",
+       "      <td>3.712688</td>\n",
+       "      <td>-0.438402</td>\n",
+       "      <td>-0.257343</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>351 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    target      cat1      cat2      cat3      cat4      cat5\n",
+       "0        1 -1.085433 -0.008109  2.769221 -1.309007  1.818651\n",
+       "1        0 -0.220155  1.821277  0.997081 -0.944791  5.082852\n",
+       "2        1 -0.546220 -0.090474  3.039274 -0.793125  0.585284\n",
+       "3        0 -0.532459 -1.948231 -1.751228 -0.621276 -2.728531\n",
+       "4        1 -0.665896  0.597152  1.729603 -1.021183  2.745559\n",
+       "..     ...       ...       ...       ...       ...       ...\n",
+       "346      1 -0.319230 -0.128999  4.123497 -0.468865 -0.377496\n",
+       "347      1 -0.094618 -0.203330  4.084755 -0.663449 -0.544531\n",
+       "348      1 -0.141873 -0.188322  4.018230 -0.705673 -0.517522\n",
+       "349      1 -0.402674 -0.219408  3.848034 -0.950649 -0.291891\n",
+       "350      1 -0.351966 -0.281709  3.712688 -0.438402 -0.257343\n",
+       "\n",
+       "[351 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_dict['auto_encoder']"
    ]
   },
   {
@@ -82,8 +254,10 @@
     }
    ],
    "source": [
-    "for key in loaded_dict:\n",
-    "    print(key)"
+    "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\sd_results'\n",
+    "file_name = '-data-reductions.pkl'\n",
+    "with open(os.path.join(sd_results_path,file_name), 'rb') as f:\n",
+    "    loaded_dict =pickle.load(f)"
    ]
   },
   {
