Worked more in test_interpet. Ill delete everythin else and add it manually after pulling Lorenzos changes

--- a/test_interpret.ipynb
+++ b/test_interpret.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,26 +27,41 @@
     "# from dimensionality_reduction import reduce_dimensionality,reduce_with\n",
     "# from beamSearch import EMM, as_string\n",
     "# from adjPysubgroup import adjustedBestFirstSearch, adjustedDFS, adjustedApriori\n",
-    "# from qualityMeasures import calc_result_bs, calc_result_ps\n",
+    "from qualityMeasures import calc_result_bs, calc_result_ps\n",
     "from interpretabilityMeasures import Feature_Correlation_Scores, DBI_beam, DBI_ps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading the object using dill\n",
     "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\sd_results'\n",
-    "file_name = '-data-reductions.pkl'\n",
+    "file_name = 'Ionosphere-data-reductions.pkl'\n",
     "with open(os.path.join(sd_results_path,file_name), 'rb') as f:\n",
     "    loaded_dict =pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# datasets = []\n",
+    "# for dataset in dataset:\n",
+    "#     file_name = '-data-reductions.pkl'\n",
+    "#     en_methods = ['vanilla', 'auto_encoder', 'PCA', 'SPCA']\n",
+    "#     for en_method in en_methods:\n",
+    "#         fcs, fcss = Feature_Correlation_Scores(loaded_dict['vanilla'], loaded_dict[en_method])\n",
+    "#         print(en_method, \"    \", \"\\n FCS: \", round(fcs, 2), \"    FCSS\", round(fcss, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -63,201 +78,163 @@
     }
    ],
    "source": [
-    "datasets = []\n",
-    "for dataset in dataset:\n",
-    "    file_name = '-data-reductions.pkl'\n",
-    "        en_methods = ['auto_encoder', 'PCA', 'SPCA']\n",
-    "        for en_method in en_methods:\n",
-    "            fcs, fcss = Feature_Correlation_Scores(loaded_dict['vanilla'], loaded_dict[en_method])\n",
-    "            print(en_method, \"    \", \"\\n FCS: \", round(fcs, 2), \"    FCSS\", round(fcss, 2))"
+    "en_methods = ['auto_encoder', 'PCA', 'SPCA']\n",
+    "for en_method in en_methods:\n",
+    "    fcs, fcss = Feature_Correlation_Scores(loaded_dict['vanilla'], loaded_dict[en_method])\n",
+    "    print(en_method, \"    \", \"\\n FCS: \", round(fcs, 2), \"    FCSS\", round(fcss, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = loaded_dict['vanilla']\n",
+    "df_en = loaded_dict['PCA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\sd_results'\n",
+    "file_name = 'Ionosphere-results-24-10-2024-15-01.pkl'\n",
+    "with open(os.path.join(sd_results_path,file_name), 'rb') as f:\n",
+    "    loaded_dict =pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bfs = loaded_dict['vanilla']['Best-First Search']['results_org']\n",
+    "bfs_en = loaded_dict['PCA']['']['results_org']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subgroups_n = [i for i in beam_search.get_values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps_sd_methods = ['Apriori', 'Best-First Search', 'Depth-First Search']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target</th>\n",
-       "      <th>cat1</th>\n",
-       "      <th>cat2</th>\n",
-       "      <th>cat3</th>\n",
-       "      <th>cat4</th>\n",
-       "      <th>cat5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.085433</td>\n",
-       "      <td>-0.008109</td>\n",
-       "      <td>2.769221</td>\n",
-       "      <td>-1.309007</td>\n",
-       "      <td>1.818651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.220155</td>\n",
-       "      <td>1.821277</td>\n",
-       "      <td>0.997081</td>\n",
-       "      <td>-0.944791</td>\n",
-       "      <td>5.082852</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.546220</td>\n",
-       "      <td>-0.090474</td>\n",
-       "      <td>3.039274</td>\n",
-       "      <td>-0.793125</td>\n",
-       "      <td>0.585284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.532459</td>\n",
-       "      <td>-1.948231</td>\n",
-       "      <td>-1.751228</td>\n",
-       "      <td>-0.621276</td>\n",
-       "      <td>-2.728531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.665896</td>\n",
-       "      <td>0.597152</td>\n",
-       "      <td>1.729603</td>\n",
-       "      <td>-1.021183</td>\n",
-       "      <td>2.745559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.319230</td>\n",
-       "      <td>-0.128999</td>\n",
-       "      <td>4.123497</td>\n",
-       "      <td>-0.468865</td>\n",
-       "      <td>-0.377496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.094618</td>\n",
-       "      <td>-0.203330</td>\n",
-       "      <td>4.084755</td>\n",
-       "      <td>-0.663449</td>\n",
-       "      <td>-0.544531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.141873</td>\n",
-       "      <td>-0.188322</td>\n",
-       "      <td>4.018230</td>\n",
-       "      <td>-0.705673</td>\n",
-       "      <td>-0.517522</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.402674</td>\n",
-       "      <td>-0.219408</td>\n",
-       "      <td>3.848034</td>\n",
-       "      <td>-0.950649</td>\n",
-       "      <td>-0.291891</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.351966</td>\n",
-       "      <td>-0.281709</td>\n",
-       "      <td>3.712688</td>\n",
-       "      <td>-0.438402</td>\n",
-       "      <td>-0.257343</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>351 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    target      cat1      cat2      cat3      cat4      cat5\n",
-       "0        1 -1.085433 -0.008109  2.769221 -1.309007  1.818651\n",
-       "1        0 -0.220155  1.821277  0.997081 -0.944791  5.082852\n",
-       "2        1 -0.546220 -0.090474  3.039274 -0.793125  0.585284\n",
-       "3        0 -0.532459 -1.948231 -1.751228 -0.621276 -2.728531\n",
-       "4        1 -0.665896  0.597152  1.729603 -1.021183  2.745559\n",
-       "..     ...       ...       ...       ...       ...       ...\n",
-       "346      1 -0.319230 -0.128999  4.123497 -0.468865 -0.377496\n",
-       "347      1 -0.094618 -0.203330  4.084755 -0.663449 -0.544531\n",
-       "348      1 -0.141873 -0.188322  4.018230 -0.705673 -0.517522\n",
-       "349      1 -0.402674 -0.219408  3.848034 -0.950649 -0.291891\n",
-       "350      1 -0.351966 -0.281709  3.712688 -0.438402 -0.257343\n",
-       "\n",
-       "[351 rows x 6 columns]"
+       "datetime.timedelta(seconds=689, microseconds=623150)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loaded_dict['auto_encoder']"
+    "loaded_dict['vanilla']['Beam Search']['running_time_org']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vanilla\n",
-      "auto_encoder\n",
-      "PCA\n",
-      "SPCA\n"
+      "Ionosphere :    \n",
+      "\n",
+      "auto_encoder :     \n",
+      "   FCS:  0.53     FCSS 0.13\n",
+      "DBI Apriori:  7.1264183629760245\n",
+      "DBI Best-First Search:  6.055068569420404\n",
+      "DBI Depth-First Search:  6.353466300390547\n",
+      "DBI Beam Search:  1731120088263364.8 \n",
+      "\n",
+      "PCA :     \n",
+      "   FCS:  0.65     FCSS 0.14\n",
+      "DBI Apriori:  7.308475820444398\n",
+      "DBI Best-First Search:  6.663956085266635\n",
+      "DBI Depth-First Search:  6.632011546952284\n",
+      "DBI Beam Search:  1.5491901587864972e+16 \n",
+      "\n",
+      "SPCA :     \n",
+      "   FCS:  0.72     FCSS 0.19\n",
+      "DBI Apriori:  7.088910353666094\n",
+      "DBI Best-First Search:  7.172361791274352\n",
+      "DBI Depth-First Search:  7.106983731853952\n",
+      "DBI Beam Search:  8756581801206236.0 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\sd_results'\n",
-    "file_name = '-data-reductions.pkl'\n",
-    "with open(os.path.join(sd_results_path,file_name), 'rb') as f:\n",
-    "    loaded_dict =pickle.load(f)"
+    "dct_datasets = ['Ionosphere'] # to test <- Remove later\n",
+    "for dataset in dct_datasets:\n",
+    "    df_file_name = dataset+'-data-reductions.pkl'\n",
+    "    results_file_name = dataset+'-results-24-10-2024-15-01.pkl'\n",
+    "    with open(os.path.join(sd_results_path,df_file_name), 'rb') as f:\n",
+    "        dfs_dict =pickle.load(f)\n",
+    "    with open(os.path.join(sd_results_path,results_file_name), 'rb') as f:\n",
+    "        results_dict =pickle.load(f)\n",
+    "    print(dataset, \":    \\n\")\n",
+    "    en_methods = ['auto_encoder', 'PCA', 'SPCA']\n",
+    "    ps_sd_methods = ['Apriori', 'Best-First Search', 'Depth-First Search']\n",
+    "    for en_method in en_methods:\n",
+    "        fcs, fcss = Feature_Correlation_Scores(dfs_dict['vanilla'], dfs_dict[en_method])\n",
+    "        print(en_method, \":    \", \"\\n   FCS: \", round(fcs, 2), \"    FCSS\", round(fcss, 2))\n",
+    "        for sd_method in ps_sd_methods:\n",
+    "            dbi = DBI_ps(results_dict[en_method][sd_method]['results_org'], dfs_dict[en_method])\n",
+    "            print(\"DBI \"+sd_method+\": \", dbi)\n",
+    "        subgroups_beam = [i for i in results_dict[en_method]['Beam Search']['results_org'].get_values()]\n",
+    "        dbi = DBI_beam(subgroups_beam, dfs_dict[en_method])\n",
+    "        print(\"DBI Beam Search: \", dbi, \"\\n\")\n",
+    "    print(\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best-First Search\n",
+      "Depth-First Search\n",
+      "Apriori\n",
+      "Beam Search\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in loaded_dict['vanilla']:\n",
+    "    print(i)"
    ]
   },
   {
