correct results dfs

--- a/framework.ipynb
+++ b/framework.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8919,9 +8919,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset='Ionosphere'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Ionosphere-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Ionosphere-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Ionosphere-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Ionosphere-SPCA.pkl\n",
+      "Results saved to sd_results\\Ionosphere-results-26-10-2024-17-41.pkl\n",
+      "dataset='Mushroom'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Mushroom-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Mushroom-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Mushroom-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Mushroom-SPCA.pkl\n",
+      "Results saved to sd_results\\Mushroom-results-26-10-2024-17-41.pkl\n",
+      "dataset='Adult'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Adult-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Adult-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Adult-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Adult-SPCA.pkl\n",
+      "Results saved to sd_results\\Adult-results-26-10-2024-17-41.pkl\n",
+      "dataset='Soybean'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Soybean-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Soybean-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Soybean-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Soybean-SPCA.pkl\n",
+      "Results saved to sd_results\\Soybean-results-26-10-2024-17-41.pkl\n",
+      "dataset='Arrhythmia'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Arrhythmia-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Arrhythmia-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Arrhythmia-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Arrhythmia-SPCA.pkl\n",
+      "Results saved to sd_results\\Arrhythmia-results-26-10-2024-17-42.pkl\n",
+      "dataset='Indoor'\n",
+      "vanilla\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Indoor-vanilla.pkl\n",
+      "auto_encoder\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Indoor-auto_encoder.pkl\n",
+      "PCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Indoor-PCA.pkl\n",
+      "SPCA\n",
+      "Temporary results saved to sd_temp_results\\temp-results-DFS-Indoor-SPCA.pkl\n",
+      "Results saved to sd_results\\Indoor-results-26-10-2024-17-42.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# get correct results for DFS for each dataset\n",
     "for dataset in ['Ionosphere','Mushroom','Adult','Soybean','Arrhythmia','Indoor']:\n",
@@ -8934,7 +9001,7 @@
     "    \n",
     "    # open dataset results\n",
     "    with open(os.path.join(\n",
-    "        r'sd_results_renamed',\n",
+    "        r'results_renamed',\n",
     "        f'{dataset}-results.pkl'), 'rb') as f:\n",
     "        results = pickle.load(f)\n",
     "    \n",
@@ -8945,8 +9012,8 @@
     "\n",
     "        results[reduction_method]['Depth-First Search'] = dct_dfs\n",
     "\n",
-    "    now = datetime.datetime.now()\n",
-    "    export_results('sd_results',f'{dataset_name}-results-{now}.pkl',results)"
+    "    now = datetime.datetime.now().strftime(\"%d-%m-%Y-%H-%M\")\n",
+    "    export_results('sd_results',f'{dataset}-results-{now}.pkl',results)"
    ]
   },
   {
@@ -9147,7 +9214,7 @@
    "source": [
     "dataset_names = ['Ionosphere', 'Arrhythmia', 'Indoor', 'Soybean', 'Mushroom', 'Adult']\n",
     "\n",
-    "sd_results_path = r'C:\\Users\\20193723\\OneDrive - TU Eindhoven\\Documents\\Research Topics in Data Mining\\Interpretable-Subgroup-Discovery\\results_renamed'\n",
+    "sd_results_path = 'results_renamed'\n",
     "# dct_datasets = ['Soybean'] # to test <- Remove later\n",
     "categorical_datasets = ['Mushroom', 'Adult']\n",
     "for dataset in dct_datasets:\n",
@@ -9191,7 +9258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ReserarchTopicsNew",
    "language": "python",
    "name": "python3"
   },
@@ -9205,7 +9272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
