--- a/framework.ipynb
+++ b/framework.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,9 +1118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dct_ion' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m dct_opt_feat \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIonosphere\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[43mdct_ion\u001b[49m,\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMushroom\u001b[39m\u001b[38;5;124m'\u001b[39m:dct_shroom,\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAdult\u001b[39m\u001b[38;5;124m'\u001b[39m:dct_adult,\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSoybean\u001b[39m\u001b[38;5;124m'\u001b[39m:dct_soy,\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mArrhythmia\u001b[39m\u001b[38;5;124m'\u001b[39m:dct_arrh,\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndoor\u001b[39m\u001b[38;5;124m'\u001b[39m:dct_indoor\n\u001b[0;32m      8\u001b[0m }\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dct_ion' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dct_opt_feat = {\n",
     "    'Ionosphere':dct_ion,\n",
@@ -1128,7 +1147,23 @@
     "    'Adult':dct_adult,\n",
     "    'Soybean':dct_soy,\n",
     "    'Arrhythmia':dct_arrh,\n",
-    "    # 'Indoor':dct_indoor\n",
+    "    'Indoor':dct_indoor\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct_opt_feat={\n",
+    "    'Ionosphere': {'auto_encoder': 5, 'PCA': 5, 'SPCA': 5},\n",
+    "    'Mushroom': {'auto_encoder': 5, 'PCA': 7, 'SPCA': 7},\n",
+    "    'Adult': {'auto_encoder': 3, 'PCA': 5, 'SPCA': 5},\n",
+    "    'Soybean': {'auto_encoder': 6, 'PCA': 4, 'SPCA': 4},\n",
+    "    'Arrhythmia': {'auto_encoder': 5, 'PCA': 4, 'SPCA': 4},\n",
+    "    'Indoor': {'auto_encoder': 4, 'PCA': 4, 'SPCA': 4}\n",
     "}"
    ]
   },
@@ -9012,82 +9047,8 @@
     "\n",
     "        results[reduction_method]['Depth-First Search'] = dct_dfs\n",
     "\n",
-    "    now = datetime.datetime.now().strftime(\"%d-%m-%Y-%H-%M\")\n",
+    "    now = datetime.datetime.now()\n",
     "    export_results('sd_results',f'{dataset}-results-{now}.pkl',results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'results_org':      quality                               subgroup  size_sg  size_dataset  \\\n",
-       " 0   0.240686  attribute15=='1' AND attribute18=='0'      135           266   \n",
-       " 1   0.235174  attribute13=='2' AND attribute15=='1'      138           266   \n",
-       " 2   0.232998  attribute15=='1' AND attribute30=='0'      131           266   \n",
-       " 3   0.231500  attribute15=='1' AND attribute26=='0'      140           266   \n",
-       " 4   0.229663  attribute15=='1' AND attribute20=='0'      141           266   \n",
-       " ..       ...                                    ...      ...           ...   \n",
-       " 95  0.101391   attribute14=='0' AND attribute8=='1'       86           266   \n",
-       " 96  0.101080  attribute19=='0' AND attribute32=='0'      123           266   \n",
-       " 97  0.101052  attribute26=='0' AND attribute31=='0'      211           266   \n",
-       " 98  0.100147   attribute19=='0' AND attribute5=='0'      101           266   \n",
-       " 99  0.099497   attribute29=='0' AND attribute5=='0'      130           266   \n",
-       " \n",
-       "     positives_sg  positives_dataset  size_complement  relative_size_sg  \\\n",
-       " 0            130                130              131          0.507519   \n",
-       " 1            130                130              128          0.518797   \n",
-       " 2            126                130              135          0.492481   \n",
-       " 3            130                130              126          0.526316   \n",
-       " 4            130                130              125          0.530075   \n",
-       " ..           ...                ...              ...               ...   \n",
-       " 95            69                130              180          0.323308   \n",
-       " 96            87                130              143          0.462406   \n",
-       " 97           130                130               55          0.793233   \n",
-       " 98            76                130              165          0.379699   \n",
-       " 99            90                130              136          0.488722   \n",
-       " \n",
-       "     relative_size_complement  coverage_sg  coverage_complement  \\\n",
-       " 0                   0.492481     1.000000             0.000000   \n",
-       " 1                   0.481203     1.000000             0.000000   \n",
-       " 2                   0.507519     0.969231             0.030769   \n",
-       " 3                   0.473684     1.000000             0.000000   \n",
-       " 4                   0.469925     1.000000             0.000000   \n",
-       " ..                       ...          ...                  ...   \n",
-       " 95                  0.676692     0.530769             0.469231   \n",
-       " 96                  0.537594     0.669231             0.330769   \n",
-       " 97                  0.206767     1.000000             0.000000   \n",
-       " 98                  0.620301     0.584615             0.415385   \n",
-       " 99                  0.511278     0.692308             0.307692   \n",
-       " \n",
-       "     target_share_sg  target_share_complement  target_share_dataset      lift  \n",
-       " 0          0.962963                 0.000000              0.488722  1.970370  \n",
-       " 1          0.942029                 0.000000              0.488722  1.927536  \n",
-       " 2          0.961832                 0.029630              0.488722  1.968056  \n",
-       " 3          0.928571                 0.000000              0.488722  1.900000  \n",
-       " 4          0.921986                 0.000000              0.488722  1.886525  \n",
-       " ..              ...                      ...                   ...       ...  \n",
-       " 95         0.802326                 0.338889              0.488722  1.641682  \n",
-       " 96         0.707317                 0.300699              0.488722  1.447280  \n",
-       " 97         0.616114                 0.000000              0.488722  1.260664  \n",
-       " 98         0.752475                 0.327273              0.488722  1.539680  \n",
-       " 99         0.692308                 0.294118              0.488722  1.416568  \n",
-       " \n",
-       " [100 rows x 15 columns],\n",
-       " 'running_time_org': datetime.timedelta(microseconds=95001)}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get running times of dim reductions\n",
-    "dct_reduction_times = {}"
    ]
   },
   {
@@ -9096,17 +9057,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get running times of dim reductions\n",
+    "dct_reduction_times = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct_opt_feat={\n",
+    "    'Ionosphere': {'auto_encoder': 5, 'PCA': 5, 'SPCA': 5},\n",
+    "    'Mushroom': {'auto_encoder': 5, 'PCA': 7, 'SPCA': 7},\n",
+    "    'Adult': {'auto_encoder': 3, 'PCA': 5, 'SPCA': 5},\n",
+    "    'Soybean': {'auto_encoder': 6, 'PCA': 4, 'SPCA': 4},\n",
+    "    'Arrhythmia': {'auto_encoder': 5, 'PCA': 4, 'SPCA': 4},\n",
+    "    'Indoor': {'auto_encoder': 4, 'PCA': 4, 'SPCA': 4}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening the Adult dataset...\n",
+      "1527/1527 [==============================] - 1s 716us/step\n",
+      "Temporary results saved to sd_temp_results\\Adult-temp-results-auto_encoder-rt.pkl\n",
+      "Temporary results saved to sd_temp_results\\Adult-temp-results-PCA-rt.pkl\n",
+      "Temporary results saved to sd_temp_results\\Adult-temp-results-SPCA-rt.pkl\n",
+      "Results saved to sd_results\\Adult-data-reductions.pkl\n",
+      "Opening the Indoor dataset...\n",
+      "658/658 [==============================] - 1s 711us/step\n",
+      "Temporary results saved to sd_temp_results\\Indoor-temp-results-auto_encoder-rt.pkl\n",
+      "Temporary results saved to sd_temp_results\\Indoor-temp-results-PCA-rt.pkl\n",
+      "Temporary results saved to sd_temp_results\\Indoor-temp-results-SPCA-rt.pkl\n",
+      "Results saved to sd_results\\Indoor-data-reductions.pkl\n"
+     ]
+    }
+   ],
+   "source": [
     "# get reduction times\n",
-    "for dataset in ['Ionosphere','Mushroom','Adult','Soybean','Arrhythmia','Indoor']:\n",
+    "for dataset in ['Adult', 'Indoor']: #'Mushroom', 'Indoor','Adult','Ionosphere','Soybean','Arrhythmia'\n",
     "\n",
+    "    optimal_features=dct_opt_feat[dataset]\n",
     "    dct_rt = {}\n",
     "    # ---------=| open data |=---------\n",
-    "    print(f'Opening the {dataset_name} dataset...')\n",
-    "    df, cat, num, features = getData(dataset_name)\n",
+    "    print(f'Opening the {dataset} dataset...')\n",
+    "    df, cat, num, features = getData(dataset)\n",
     "\n",
     "    # ---------=| reduce dimensionality |=---------\n",
     "    for reduction_method in ['auto_encoder', 'PCA', 'SPCA']:\n",
-    "        \n",
+    "\n",
     "\n",
     "        start_time = datetime.datetime.now()\n",
     "        _ = reduce_dimensionality(\n",
@@ -9121,10 +9128,10 @@
     "            \n",
     "        dct_rt[reduction_method]=running_time\n",
     "        # temporary export as safety feature\n",
-    "        export_results('sd_temp_results',f'{dataset_name}-temp-results-{reduction_method}-rt.pkl',dct_rt)\n",
+    "        export_results('sd_temp_results',f'{dataset}-temp-results-{reduction_method}-rt.pkl',dct_rt)\n",
     "    \n",
     "    # export all data\n",
-    "    export_results('sd_results',f'{dataset_name}-data-reductions.pkl',dct_rt)"
+    "    export_results('sd_results',f'{dataset}-data-reductions.pkl',dct_rt)"
    ]
   },
   {
