--- a/methods/beam_search_test.ipynb
+++ b/methods/beam_search_test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +268,8 @@
     "def eval_quality(desc, df, target):\n",
     "    # Function used to calculate the solution's WRAcc\n",
     "    sub_group = df[df.eval(as_string(desc))] \n",
+    "    if len(sub_group) == 0: # ! check whether subgroup contains anything to avoid division by zero\n",
+    "        return float('-inf') \n",
     "    prop_p_sg = len(sub_group[sub_group[target]==1])/len(sub_group)\n",
     "    prop_p_df = len(df[df[target]==1])/len(df)\n",
     "    wracc = ((len(sub_group)/len(df))**1) * (prop_p_sg - prop_p_df) #for WRAcc a=1\n",
@@ -315,7 +317,6 @@
     "            # Start by evaluating the quality of the seed\n",
     "            if seed != []:\n",
     "                seed_quality = eval_quality(seed, df, target)\n",
-    "                beam.add(seed, seed_quality) # ! include seed itself in the beam\n",
     "            else:\n",
     "                seed_quality = float('-inf') # instead of 99\n",
     "\n",
@@ -365,7 +366,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Beam Search algo's"
+    "## Define Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def export_results(save_path,file_name,data):\n",
+    "    \"\"\"Function to export the data to a temporary or final file.\n",
+    "    save_path: directory/folder to which the data should be saved.\n",
+    "    file_name: name of the file\n",
+    "    data: data that should be saved\n",
+    "    \"\"\"\n",
+    "    file_path = os.path.join(save_path,file_name)\n",
+    "    with open(file_path,'wb') as f:\n",
+    "        pickle.dump(data,f)\n",
+    "    \n",
+    "    print(f\"{'Temporary results' if 'temp' in file_name else 'Results'} saved to {file_path}\")\n",
+    "\n",
+    "\n",
+    "def run_search_method(search_method, method_name, df, save_path, reduction_method):\n",
+    "    \"\"\"\n",
+    "    Method that runs a search method for the original and the encoded data, and returns the results in a dictionary \n",
+    "    search_method: search method which is a function\n",
+    "    method_name: name of the search method to create temporary file_name\n",
+    "    df: input dataframe\n",
+    "    save_path: path to which temporary data should be saved\n",
+    "    \"\"\"\n",
+    "    # original data\n",
+    "    start_time = datetime.datetime.now()\n",
+    "    results = search_method(df)\n",
+    "    if 'BS' not in method_name:\n",
+    "        results['subgroup'] = results['subgroup'].apply(lambda x: str(x))\n",
+    "    running_time = datetime.datetime.now() - start_time\n",
+    "\n",
+    "    data = {\n",
+    "        'results_org': results,\n",
+    "        'running_time_org': running_time,\n",
+    "    }\n",
+    "\n",
+    "    export_results(save_path,f'temp-results-{method_name}-{reduction_method}.pkl',data)\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def get_results_dataset_bs(dataset_name : str, save_path = 'sd_results',dct_data=None):\n",
+    "\n",
+    "    if not os.path.exists(save_path):\n",
+    "        os.makedirs(save_path)\n",
+    "\n",
+    "    # ---------=| find subgroups |=---------\n",
+    "    print(f'Finding subgroups for {dataset_name} data...'+'          '*10,end='\\r')\n",
+    "\n",
+    "    beamSearch = lambda df_: EMM(100, 3, 100, [], df_, 'target', ensure_diversity=True, prnt_seed=False)\n",
+    "    dct_bs_results = {}\n",
+    "\n",
+    "    # iterate over all types of dimensionality reduction and all search methods\n",
+    "    for reduction_method in ['vanilla', 'auto_encoder', 'PCA', 'SPCA']:    \n",
+    "        print(f' -> starting Beam Search for {reduction_method} data'+'      '*10,end='\\r')\n",
+    "\n",
+    "        dct_bs = run_search_method(beamSearch,f'BS-{dataset_name}',dct_data[reduction_method],save_path, reduction_method)\n",
+    "\n",
+    "        # save results to overall dictionary\n",
+    "        dct_bs_results[reduction_method] = dct_bs\n",
+    "\n",
+    "        # save intermediate results\n",
+    "        now = datetime.datetime.now().strftime(\"%d-%m-%Y-%H-%M\")\n",
+    "        export_results(save_path,f'{dataset_name}-temp-bs-results-{reduction_method}-{now}.pkl',dct_bs_results)\n",
+    "    \n",
+    "    # ---------=| export all results |=---------\n",
+    "    print(f\"Exporting results for {dataset_name} data...\"+'      '*10,end='\\r')\n",
+    "\n",
+    "    now = datetime.datetime.now().strftime(\"%d-%m-%Y-%H-%M\")\n",
+    "    export_results(save_path,f'{dataset_name}-bs-results-{now}.pkl',dct_bs_results)\n",
+    "    \n",
+    "    return dct_bs_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Everything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct_bs_results = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in ['Soybean','Ionosphere','Arrhythmia']:\n",
+    "    data = dct_datasets[dataset]\n",
+    "    \n",
+    "    result = get_results_dataset_bs(\n",
+    "        dataset_name=dataset,\n",
+    "        save_path = 'sd_results',\n",
+    "        dct_data=data\n",
+    "    )\n",
+    "    dct_bs_results[dataset] = result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in ['Mushroom']:\n",
+    "    data = dct_datasets[dataset]\n",
+    "    \n",
+    "    result = get_results_dataset_bs(\n",
+    "        dataset_name=dataset,\n",
+    "        save_path = 'sd_results',\n",
+    "        dct_data=data\n",
+    "    )\n",
+    "    dct_bs_results[dataset] = result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in ['Adult']:\n",
+    "    data = dct_datasets[dataset]\n",
+    "    \n",
+    "    result = get_results_dataset_bs(\n",
+    "        dataset_name=dataset,\n",
+    "        save_path = 'sd_results',\n",
+    "        dct_data=data\n",
+    "    )\n",
+    "    dct_bs_results[dataset] = result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in ['Indoor']:\n",
+    "    data = dct_datasets[dataset]\n",
+    "    \n",
+    "    result = get_results_dataset_bs(\n",
+    "        dataset_name=dataset,\n",
+    "        save_path = 'sd_results',\n",
+    "        dct_data=data\n",
+    "    )\n",
+    "    dct_bs_results[dataset] = result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code below should not run"
    ]
   },
   {
