Yes! Ready to Run!

--- a/beam_search_test.ipynb
+++ b/beam_search_test.ipynb
@@ -2,31 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "# open data\n",
-    "# Fix beam search algorithm\n",
-    "# run beam search\n",
-    "# run results code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
-    "# import sys\n",
-    "# import logging\n",
-    "# import datetime\n",
+    "import sys\n",
+    "import datetime\n",
     "import dill as pickle\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from sklearn.preprocessing import OneHotEncoder\n",
-    "# import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -36,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # original py files\n",
-    "# sys.path.insert(1, 'methods')\n",
+    "# original py files\n",
+    "sys.path.insert(1, 'methods')\n",
     "\n",
     "from data_methods import getData, standardize\n",
     "from dimensionality_reduction import reduce_dimensionality,reduce_with\n",
@@ -65,7 +49,7 @@
     "for dataset in ['Ionosphere','Mushroom','Adult','Soybean','Arrhythmia','Indoor']:\n",
     "\n",
     "    with open(os.path.join(\n",
-    "        r'W:\\OneDrive - TU Eindhoven\\DS&AI\\2024-2025\\2024-2025 q1\\2AMM20 - Research Topics in Data Mining\\Research Project Phase\\GitHub Code\\Interpretable-Subgroup-Discovery-1\\results_renamed',\n",
+    "        r'results_renamed',\n",
     "        f'{dataset}-data-reductions.pkl'), 'rb') as f:\n",
     "        data = pickle.load(f)\n",
     "\n",
@@ -371,16 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,14 +403,14 @@
     "        os.makedirs(save_path)\n",
     "\n",
     "    # ---------=| find subgroups |=---------\n",
-    "    print(f'Finding subgroups for {dataset_name} data...'+'          '*10,end='\\r')\n",
+    "    print(f'Finding subgroups for {dataset_name} data...')\n",
     "\n",
     "    beamSearch = lambda df_: EMM(100, 3, 100, [], df_, 'target', ensure_diversity=True, prnt_seed=False)\n",
     "    dct_bs_results = {}\n",
     "\n",
     "    # iterate over all types of dimensionality reduction and all search methods\n",
     "    for reduction_method in ['vanilla', 'auto_encoder', 'PCA', 'SPCA']:    \n",
-    "        print(f' -> starting Beam Search for {reduction_method} data'+'      '*10,end='\\r')\n",
+    "        print(f' -> starting Beam Search for {reduction_method} data')\n",
     "\n",
     "        dct_bs = run_search_method(beamSearch,f'BS-{dataset_name}',dct_data[reduction_method],save_path, reduction_method)\n",
     "\n",
@@ -447,7 +422,7 @@
     "        export_results(save_path,f'{dataset_name}-temp-bs-results-{reduction_method}-{now}.pkl',dct_bs_results)\n",
     "    \n",
     "    # ---------=| export all results |=---------\n",
-    "    print(f\"Exporting results for {dataset_name} data...\"+'      '*10,end='\\r')\n",
+    "    print(f\"Exporting results for {dataset_name} data...\")\n",
     "\n",
     "    now = datetime.datetime.now().strftime(\"%d-%m-%Y-%H-%M\")\n",
     "    export_results(save_path,f'{dataset_name}-bs-results-{now}.pkl',dct_bs_results)\n",
@@ -543,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Tests"
+    "## Get Performance Results"
    ]
   },
   {
@@ -552,7 +527,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "code below should not run"
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uncommented text so that code below does not run (!)"
    ]
   },
   {
